ray-operator/config/samples/ray-cluster.seperate-ingress.yaml
# Ingress for raycluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: raycluster-ingress-head-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: raycluster-ingress-head-svc
            port:
              number: 8265
        path: /raycluster-ingress/(.*)
        pathType: Exact
